[gd_scene load_steps=19 format=3 uid="uid://b0d2bw1sc2e0a"]

[ext_resource type="Script" path="res://scripts/mob.gd" id="1_a0wlk"]
[ext_resource type="Texture2D" uid="uid://bqkkmip14ld2j" path="res://Puny-Characters/Slime.png" id="1_kojl6"]
[ext_resource type="Script" path="res://scripts/Area2D.gd" id="3_es60a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4k57v"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ujfla"]
atlas = ExtResource("1_kojl6")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkmlq"]
atlas = ExtResource("1_kojl6")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfwc7"]
atlas = ExtResource("1_kojl6")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_la7ib"]
atlas = ExtResource("1_kojl6")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpwlr"]
atlas = ExtResource("1_kojl6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2glw"]
atlas = ExtResource("1_kojl6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_333qc"]
atlas = ExtResource("1_kojl6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecnhj"]
atlas = ExtResource("1_kojl6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0s61"]
atlas = ExtResource("1_kojl6")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqk8s"]
atlas = ExtResource("1_kojl6")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0qlh"]
atlas = ExtResource("1_kojl6")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yxlqv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujfla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkmlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfwc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la7ib")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_kpwlr")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_a2glw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_333qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecnhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0s61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqk8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0qlh")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vr271"]
radius = 63.0079

[sub_resource type="CircleShape2D" id="CircleShape2D_v7n7m"]
radius = 15.0

[node name="mob" type="CharacterBody2D"]
script = ExtResource("1_a0wlk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(9, 6)
shape = SubResource("CircleShape2D_4k57v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, 6)
scale = Vector2(1.91406, 0.90625)
sprite_frames = SubResource("SpriteFrames_yxlqv")
animation = &"idle"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(9, 6)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_es60a")

[node name="AreaColli" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 0)
shape = SubResource("CircleShape2D_vr271")

[node name="hitbox_enemy" type="Area2D" parent="."]
position = Vector2(5, 8)

[node name="hitbox_enemy_colli" type="CollisionShape2D" parent="hitbox_enemy"]
position = Vector2(5, -2)
shape = SubResource("CircleShape2D_v7n7m")

[node name="Take_damage_cooldown" type="Timer" parent="."]

[node name="respawn_timer" type="Timer" parent="."]
wait_time = 5.358
one_shot = true

[node name="mob_health" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0.14902, 1)
offset_left = 2.0
offset_top = 11.0
offset_right = 152.0
offset_bottom = 38.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="mob_recovery" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="hitbox_enemy" to="." method="_on_hitbox_enemy_body_entered"]
[connection signal="body_exited" from="hitbox_enemy" to="." method="_on_hitbox_enemy_body_exited"]
[connection signal="timeout" from="Take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="mob_recovery" to="." method="_on_mob_recovery_timeout"]
